--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
     "prettier": "^2.8.4",
     "standard": "^17.0.0"
   },
