--- a/projects/07-f3rcho-router/package.json
+++ b/projects/07-f3rcho-router/package.json
@@ -16,6 +16,12 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "standard": "^17.0.0",
     "vite": "^4.3.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
